--- a/unpacked/manifest.json
+++ b/unpacked/manifest.json
@@ -3,18 +3,18 @@
 
     "name": "Simple Bitcoin Ticker",
     "description": "This extension shows latest price of BTC in market: MtGox, BTCChina",
-    "version": "0.1",
+    "version": "0.2",
 
     "browser_action": {
-        "default_icon": {
-            "19": "icon.png"
-        }
+        "default_icon": "images/icon.png"
     },
 
     "background": {
         "persistent": true,
         "page": "background.html"
     },
+
+    "options_page": "options.html",
 
     "permissions": [
         "https://data.mtgox.com/",
