--- a/unpacked/manifest.json
+++ b/unpacked/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
 
     "name": "Simple Bitcoin Ticker",
-    "description": "This extension shows latest price of BTC in market: MtGox, BTCChina",
+    "description": "This extension shows latest price ticker of popular BTC trading markets.",
     "version": "0.2",
 
     "browser_action": {
@@ -18,6 +18,8 @@
 
     "permissions": [
         "https://data.mtgox.com/",
-        "https://data.btcchina.com/"
+        "https://data.btcchina.com/",
+        "https://www.bitstamp.net/",
+        "https://www.okcoin.com/"
     ]
 }
